# kurt

./: .gitignore  Cargo.toml  README.md
examples/camera/: main.rs  shader.wgsl
examples/depth/: main.rs  shader.wgsl
examples/instanced/: main.rs  shader.wgsl
examples/light/: light.wgsl  main.rs  shader.wgsl
examples/lights/: light.wgsl  main.rs  shader.wgsl
examples/load-model/: main.rs  shader.wgsl
examples/square-texture/: main.rs  shader.wgsl
examples/triangle/: main.rs  shader.wgsl
src/: lib.rs
src/resources/: texture.rs
src/scene/: camera.rs  model.rs
src/texture/: sampler.rs  texture.rs
