[package]
name = "kurt"
edition = "2021"
version = "0.0.1"
description = "Toy WebGPU Renderer in Rust"
authors = ["Davide Prati <info@davideprati.com>"]
resolver = "2"
homepage = "https://github.com/edapx/kurt"
repository = "https://github.com/edapx/kurt"
exclude = [
  "screenshots/*",
  "web/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"


[dependencies]
anyhow = "1.0"
winit = "0.26"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
wgpu = { version = "0.12", git="https://github.com/gfx-rs/wgpu", branch="gecko"}
pollster = "0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
tobj = { version = "3.2", features = ["async"]}
instant = "0.1"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
