[package]
name = "kurt"
edition = "2021"
version = "0.0.1"
description = "Toy WebGPU Renderer in Rust"
authors = ["Davide Prati <info@davideprati.com>"]
resolver = "2"
homepage = "https://github.com/edapx/kurt"
repository = "https://github.com/edapx/kurt"
exclude = ["screenshots/*", "web/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.16", features = ["derive"] }
cfg-if = "1"
cgmath = "0.18"
env_logger = "0.10"
pollster = "0.3"
log = "0.4"
tobj = { version = "3.2", default-features = false, features = ["async"] }
wgpu = "22.0"
winit = { version = "0.29", features = ["rwh_05"] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "22.0", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
